--- a/components/header.css
+++ b/components/header.css
@@ -48,3 +48,7 @@
   display: flex;
   align-items: center;
 }
+
+.header__theme-icon svg {
+  display: block;
+}
